2005-12-18  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	* src/Makefile.am:
	* src/plparse/Makefile.am: Fixes for builddir != srcdir.

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* data/popup.glade: add an image to the play/pause popup menu item,
	remove duplicate "u" accesskey

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* data/popup.glade: Remove keyboard shortcuts from the popup menu
	(Closes: #323855)

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_got_metadata_event): Fix the fullscreen name
	label not getting set (Closes: #324235)

2005-12-15  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	* src/backend/gstscreenshot.c:
	  Make screenshot code use 'totem' debug category as well.

2005-12-15  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	  Bump requirements for GStreamer 0.10 backend to current CVS.

	* src/backend/bacon-video-widget-gst-0.10.c: (got_time_tick),
	(bvw_error_from_gst_error),
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_get_video_property),
	(bacon_video_widget_set_video_property),
	(bacon_video_widget_can_play),
	(bacon_video_widget_get_current_frame):
	* src/backend/gstscreenshot.c: (feed_fakesrc), (save_result),
	(bvw_frame_conv_convert):
	* src/backend/gstscreenshot.h:
	  Fix screenshot taking with 0.10 backend and add debug
	  messages here and there.

2005-12-11  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* src/totem-video-thumbnailer.c: (add_holes_to_pixbuf_small),
	(add_holes_to_pixbuf_large): Don't save the thumbnail with an alpha
	component.

2005-12-10  Tim-Philipp Müller  <tim at centricular dot net>

	* src/bacon-message-connection.c: (is_owned_by_user_and_socket),
	(find_file_with_pattern), (socket_filename):
	  Don't assume the const string returned by g_dir_read_name() stays
	  valid even after g_dir_close() (fixes crash on amd64 if there is